--- a/StudentAccounting/ClientApp/package.json
+++ b/StudentAccounting/ClientApp/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "antd": "^4.9.4",
     "bootstrap": "^4.1.3",
     "jquery": "^3.5.1",
     "merge": "^1.2.1",
