--- a/StudentAccounting/ClientApp/package.json
+++ b/StudentAccounting/ClientApp/package.json
@@ -12,6 +12,7 @@
     "react": "^16.0.0",
     "react-bootstrap": "^1.4.0",
     "react-dom": "^16.0.0",
+    "react-redux": "^7.2.2",
     "react-router-bootstrap": "^0.25.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^3.4.0",
@@ -21,13 +22,14 @@
   "devDependencies": {
     "ajv": "^6.9.1",
     "cross-env": "^5.2.0",
-    "typescript": "^3.7.5",
     "eslint": "^6.8.0",
     "eslint-config-react-app": "^5.2.0",
     "eslint-plugin-flowtype": "^4.6.0",
     "eslint-plugin-import": "^2.20.1",
     "eslint-plugin-jsx-a11y": "^6.2.3",
-    "eslint-plugin-react": "^7.18.3"
+    "eslint-plugin-react": "^7.18.3",
+    "redux-devtools": "^3.7.0",
+    "typescript": "^3.7.5"
   },
   "eslintConfig": {
     "extends": "react-app"
