--- a/StudentAccounting/ClientApp/package.json
+++ b/StudentAccounting/ClientApp/package.json
@@ -17,6 +17,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "^3.4.0",
     "reactstrap": "^8.4.1",
+    "redux": "^4.0.5",
     "rimraf": "^2.6.2"
   },
   "devDependencies": {
