--- a/StudentAccounting/appsettings.json
+++ b/StudentAccounting/appsettings.json
@@ -1,6 +1,10 @@
 {
   "AppSettings": {
     "Secret": "The super secret key",
+    "allUsersCount": 0,
+    "allCoursesCount": 1,
+    "pageCoursesSize": 1,
+    "pageUsersSize": 3,
     "EmailFrom": "studac42@gmail.com",
     "SmtpHost": "smtp.gmail.com",
     "SmtpPort": 587,
