--- a/StudentAccounting/appsettings.json
+++ b/StudentAccounting/appsettings.json
@@ -5,6 +5,7 @@
     "allCoursesCount": 1,
     "pageCoursesSize": 1,
     "pageUsersSize": 3,
+    "BaseUrl": "https://localhost:44335/" ,
     "EmailFrom": "studac42@gmail.com",
     "SmtpHost": "smtp.gmail.com",
     "SmtpPort": 587,
