fix facebook login

--- a/StudentAccounting/appsettings.json
+++ b/StudentAccounting/appsettings.json
@@ -5,7 +5,7 @@
     "allCoursesCount": 0,
     "pageCoursesSize": 1,
     "pageUsersSize": 3,
-    "BaseUrl": "https://localhost:44335/" ,
+    "BaseUrl": "https://localhost:44335/",
     "EmailFrom": "studac42@gmail.com",
     "SmtpHost": "smtp.gmail.com",
     "SmtpPort": 587,
@@ -14,6 +14,12 @@
     "MessageSubject": "Registration Completed",
     "MessageBody": ""
   },
+
+  "Facebook": {
+    "AppId": "1024763727929763",
+    "AppSecret": "672fa1c1aff7d08d4377b61132303764"
+  },
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
