--- a/StudentAccounting/ClientApp/package.json
+++ b/StudentAccounting/ClientApp/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@babel/runtime": "7.0.0-beta.55",
+    "@hookform/resolvers": "^1.3.4",
     "antd": "^4.9.4",
     "bootstrap": "^4.1.3",
     "jquery": "^3.5.1",
@@ -13,10 +14,11 @@
     "react": "^16.0.0",
     "react-bootstrap": "^1.4.0",
     "react-dom": "^16.0.0",
+    "react-hook-form": "^6.15.1",
     "react-redux": "^7.2.2",
     "react-router-bootstrap": "^0.25.0",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "^3.4.0",
+    "react-scripts": "^4.0.2",
     "reactstrap": "^8.4.1",
     "redux": "^4.0.5",
     "rimraf": "^2.6.2"
@@ -30,6 +32,7 @@
     "eslint-plugin-import": "^2.20.1",
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-react": "^7.18.3",
+    "eslint-plugin-react-hooks": "^4.2.0",
     "redux-devtools": "^3.7.0",
     "typescript": "^3.7.5"
   },
